set the log in and logout for the users with password encrypted

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,10 @@
-<html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
 
-    </head>
-
-    <body>
-        <%- include('_header'); %>
-
-        <h1>SozialBuzz / <%= title %></h1>
-
-        <%- include('_footer'); %>
-    
-    </body>
-</html>
+<!-- <head> -->
+    <a href="/users/sign-in"> sign-in</a>
+<!-- </head> -->
+<!-- <head> -->
+    <a href="/users/sign-up">sign-up</a>
+<!-- </head> -->
+<h1>
+    SocialBuzz / <%= title %>
+</h1>
