--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,14 +1,7 @@
-<html>
-    <head>
-        <title>
-            <%= title  %>
-        </title>
-    </head>
+<link rel="stylesheet" href="/css/user_profile.css">
+<h1>
+    SocialBuzz / Profile Page
+</h1>
 
-    <body>
-        <%- include('_header'); %>
-
-        <h1>
-            SocialBuzz / Profile Page
-        </h1>
-    
+<p><%= user.name %></p>
+<p><%= user.email %></p>
