--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,14 @@
 
-<!-- <head> -->
-    <a href="/users/sign-in"> sign-in</a>
-<!-- </head> -->
-<!-- <head> -->
-    <a href="/users/sign-up">sign-up</a>
-<!-- </head> -->
 <h1>
     SocialBuzz / <%= title %>
 </h1>
+
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
+        <input type="submit" value="Post">
+    </form>
+
+</section>
