added a post form

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,7 +2,9 @@
     Page Header
 
     <ul>
+        <li><a href="/" >Home </a></li>
         <% if (locals.user){ %>
+      
             <li>
                 <a href="/users/profile">
                     <%= user.name %>
