--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,35 @@
     SocialBuzz / <%= title %>
 </h1>
 
-
 <section id="feed-posts">
-    <h4>Posts</h4>
-    <form action="" id="new-post-form" method="POST">
+    <h2>Posts</h2>
+
+    <% if(locals.user) {%>
+
+   
+    <form action="/posts/create" id="new-post-form" method="POST">
         <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
         <input type="submit" value="Post">
     </form>
+    <%} %>
+
+    <div id="posts-list-container">
+      <ul>
+          <% for(post of posts){ %>
+              
+          <li>
+              <p>
+                  <%= post.content %>
+                  <br>
+                  <small>
+                      <%= post.user.name %>
+                  </small>
+              </p>
+              
+          </li>
+              
+          <%} %>
+      </ul>
+  </div>
 
 </section>
