--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,20 +18,10 @@
     <div id="posts-list-container">
       <ul>
           <% for(post of posts){ %>
-              
-          <li>
-              <p>
-                  <%= post.content %>
-                  <br>
-                  <small>
-                      <%= post.user.name %>
-                  </small>
-              </p>
-              
-          </li>
+
+            <%- include('_post') -%>
               
           <%} %>
       </ul>
   </div>
-
 </section>
