--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,53 +1,2 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
 body {
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #6c757d;
-  background-color: #c8e1b9; }
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 16px 0;
-  font-weight: bold;
-  line-height: 2; }
-
-h1 {
-  font-size: 20px; }
-
-h2 {
-  font-size: 16px; }
-
-p {
-  margin: 0 0 16px 0;
-  line-height: 1.5; }
-
-button {
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  line-height: 1.5;
-  color: white;
-  background-color: #303F9F;
-  cursor: pointer; }
-  button:hover {
-    background-color: #242f78; }
-
-input[type="text"],
-input[type="email"],
-textarea {
-  padding: 8px 16px;
-  border: 1px solid #6c757d;
-  border-radius: 4px;
-  font-size: 16px;
-  line-height: 1.5; }
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-textarea:focus {
-  outline: none;
-  border-color: #303F9F; }
+  background-color: lightblue; }
