--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -1,89 +1,3 @@
-// body{
-//     background-color: rgb(231, 90, 229);
-// } 
-$primary-color: #303F9F;
-
-// Define some other colors that we'll use in our styles
-$secondary-color: #6c757d;
-$success-color: #28a745;
-$warning-color: #ffc107;
-$danger-color: #dc3545;
-
-// Define some variables for commonly-used font sizes and line heights
-$font-size-small: 14px;
-$font-size-medium: 16px;
-$font-size-large: 20px;
-$line-height-small: 1.2;
-$line-height-medium: 1.5;
-$line-height-large: 2;
-
-// Define some variables for commonly-used spacing values
-$spacing-small: 8px;
-$spacing-medium: 16px;
-$spacing-large: 24px;
-
-// Define some global styles that we'll use throughout our app
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: sans-serif;
-  font-size: $font-size-medium;
-  line-height: $line-height-medium;
-  color: $secondary-color;
-  background-color: rgb(200, 225, 185);
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 $spacing-medium 0;
-  font-weight: bold;
-  line-height: $line-height-large;
-}
-
-h1 {
-  font-size: $font-size-large;
-}
-
-h2 {
-  font-size: $font-size-medium;
-}
-
-p {
-  margin: 0 0 $spacing-medium 0;
-  line-height: $line-height-medium;
-}
-
-button {
-  padding: $spacing-small $spacing-medium;
-  border: none;
-  border-radius: 4px;
-  font-size: $font-size-medium;
-  line-height: $line-height-medium;
-  color: white;
-  background-color: $primary-color;
-  cursor: pointer;
-
-  &:hover {
-    background-color: darken($primary-color, 10%);
-  }
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-  padding: $spacing-small $spacing-medium;
-  border: 1px solid $secondary-color;
-  border-radius: 4px;
-  font-size: $font-size-medium;
-  line-height: $line-height-medium;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-textarea:focus {
-  outline: none;
-  border-color: $primary-color;
+body{
+    background-color: lightblue;
 }
