--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,6 @@
+<link rel="stylesheet" href="/css/home.css">
 
-<h1>
-    SocialBuzz / <%= title %>
-</h1>
-
+<div id="home-container"> 
 <section id="feed-posts">
     <h2>Posts</h2>
 
@@ -24,4 +22,17 @@
           <%} %>
       </ul>
   </div>
+</section>
+
+<section id="user-friends">
+    <h2>Friends</h2>
+
+    <% for(card of all_users){%> 
+
+        <p>
+            <a href="/users/profile/<%= card._id %>"><%= card.name %></a>
+        </p>
+        
+        <% } %>
+</div>
 </section>
