--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -12,7 +12,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/users/profile/<%=locals.user.id%>">Profile</a>
+                    <a href="/users/profile/<%=locals.user%>">Profile</a>
                 </li>
             </ul>
         </nav>
