--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,15 +34,21 @@
         </p>
         
         <% } %>
+
+
+    </section>
+
+    <%- include('_chat_box') -%>
 </div>
-</section>
+
+
 
 <!-- importing this script for creating the comments -->
 <script src="/js/home_post_comments.js" ></script>
 <script src="/js/home_posts.js"></script>
 
 <!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
-<script src="js/toggle_likes.js"></script>
+<script src="/js/toggle_likes.js"></script>
 <script>
     $('.toggle-like-button').each(function(){
         let self = this;
