--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,41 +1,53 @@
-<header id="layout-header">
-    <nav>
-        <div class="mini-logo">
-            <p>
-                <a href='/'>
-                    SocialBuzz
-                </a>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-            </p>
-        </div>
-    
-        <div class="auth-links">
-            <ul>
-                <% if (locals.user){ %>
-
-               
-                <li>
-                    <a href="/users/profile/<%=locals.user.id%>"><%= user.name %></a>
-                </li>
-                
-                <li>
-                    <a href="/users/sign-out">Sign Out</a>
-                </li>
-                <% }else{ %>
-                <li>
-                    <a href="/users/sign-in">Sign In</a>
-                </li>
-                <li>
-                    <a href="/users/sign-up">Sign Up</a>
-                </li>
-        
-                <% } %>
-            </ul>
-        </div>
-    </nav>
- 
-
-
-</header>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Website</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
+<body style="background-color: rgb(255, 246, 246);">
+	<header id="layout-header">
+	    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	      <a class="navbar-brand" href="/">
+	        SocialBuzz
+	      </a>
+	      <button
+	        class="navbar-toggler"
+	        type="button"
+	        data-toggle="collapse"
+	        data-target="#navbarNav"
+	        aria-controls="navbarNav"
+	        aria-expanded="false"
+	        aria-label="Toggle navigation"
+	      >
+	        <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <div class="collapse navbar-collapse" id="navbarNav">
+	        <ul class="navbar-nav mr-auto"></ul>
+	        <ul class="navbar-nav">
+	          <% if (locals.user){ %>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/profile/<%=locals.user.id%>">
+					<button class="btn btn-primary"> <%= user.name %></button>
+	            </a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-out">
+				<button class="btn btn-primary">Sign Out</button></a>
+	          </li>
+	          <% }else{ %>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-up">
+					<button class="btn btn-primary">Sign In</button></a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-up">
+					<button class="btn btn-primary">Sign Up</button></a>
+	          </li>
+	          <% } %>
+	        </ul>
+	      </div>
+	    </nav>
+	  </header>
+</body>
+</html>
