--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,32 +1,53 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<style>
+    .post-heart{
+        font-size: large;
+        color: rgba(216, 7, 7, 0.816);
+    }
+</style>
 <li>
     <p>
-      <% if (locals.user && locals.user.id == post.user.id){ %>
-      <small>
-          <a href="/posts/destroy/<%= post.id %>">delete</a>
-      </small>
-      <% } %>
-        <%= post.content %>
+    
+      <div style="background-color: rgba(181, 181, 184, 0.403);padding: 2%; box-shadow: inset;">
+         <b><%= post.content %></b> 
+
+      </div>
         <br>
+        <div style="padding-left: 5%;">
+
+       
         <small>
-            <%= post.user.name %>
+           by - <%= post.user.name %>
         </small>
 
        
         <!-- CHANGE :: display the likes of this post, if the user is logged in, then show the link to toggle likes, else, just show the count -->
         <br>
             <!-- study about the data attribute -->
-        <small>
-            <% if (locals.user){ %>
-                <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
-                        <%= post.likes.length %> Likes
-                </a>
-            <% }else{ %>
-                <%= post.likes.length %> Likes
+            <small>
+                <% if (locals.user){ %>
+                      
+                    <a class="post-heart" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
+                        <i class="fas fa-heart" ></i>
+                            <%= post.likes.length %> Likes
+                    </a>
+                <% }else{ %>
+                    <%= post.likes.length %> Likes
+                <% } %>
+            </small>
+
+            <% if (locals.user && locals.user.id == post.user.id){ %>
+            <small style="padding-left: 10%;">
+                <a href="/posts/destroy/<%= post.id %>">
+                    <button class="btn btn-primary" style="font-size: smaller; background-color: rgba(227, 14, 14, 0.729);">Delete
+                    </button>
+                </a>     
+            </small>
             <% } %>
-        </small>
+        </div>
     </p>
 
-    <div class="post-comments">
+    <div class="post-comments" style="padding-left: 5%;">
       <% if (locals.user){ %>
           <form action="/comments/create" method="POST">
               <input type="text" name="content" placeholder="add comment" required>
