added css and change styles

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -5,6 +5,7 @@
     <div class="col-md-2">
         <a href="/">Home</a>
     </div>
+    <!-- jais -->
     <div class="col-md-2">
         <a href="https://umangjais01.github.io/portfolio/">Porfolio</a>
 
