--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,16 +1,36 @@
-<li>
-    <p>
-        <% if (locals.user && locals.user.id == comment.user.id){ %>
+<style>
+  .like-heart{
+    color: rgba(212, 15, 15, 0.844);
+  }
+</style>
+  <ul>
+    <li>
+      <div>
+      
+        <p class="card-text"><%= comment.content %></p>
+        <small>by - <%= comment.user.name %></small>
+        
         <small>
-            <a href="/comments/destroy/<%=comment.id %>">delete</a>
-        </small>
-        <% } %>
-
-        <%= comment.content %>
-        <br>
-        <small>
-            <%= comment.user.name %>
+          <% if (locals.user) { %>
+          <a class="like-heart" data-likes="<%= comment.likes.length %>"
+            href="/likes/toggle/?id=<%=comment._id%>&type=Comment">
+            <i class="fas fa-heart"></i>
+            <%= comment.likes.length %> Likes
+          </a>
+          <% } else { %>
+          <%= comment.likes.length %> Likes
+          <% } %>
         </small>
         
-    </p> 
-</li>
+        <% if (locals.user && locals.user.id == comment.user){ %>
+          <small class="float-end" style="padding-left: 10%;">
+            <a href="/comments/destroy/<%=comment.id %>" class="text-danger">
+              <button class="btn btn-primary" style="font-size: xx-small;">Delete
+              </button>
+            </a>
+          </small>
+          <% } %>
+      </div>
+    </li>
+  </ul>
+  
