--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,20 +1,13 @@
-<footer id="layout-footer">
-    <div>
-        <p>
-            &#169; Umang, my first web app
-        </p>
+<div class="row">
+    <div class="col-md-4" style="text-align: start;">
+        <p>&#169; SocoalBuzz. All Rights Reserved</p>
     </div>
+    <div class="col-md-2">
+        <a href="/">Home</a>
+    </div>
+    <!-- jais -->
+    <div class="col-md-2">
+        <a href="https://umangjais01.github.io/portfolio/">Porfolio</a>
 
-    <div>
-        <nav class="footer-nav">
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/users/profile/<%=locals.user.id%>">Profile</a>
-                </li>
-            </ul>
-        </nav>
     </div>
-</footer>
+</div>
