--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,72 +1,53 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-<style>
-    .post-heart{
-        font-size: large;
-        color: rgba(216, 7, 7, 0.816);
-    }
-</style>
-<li>
-    <p>
-    
-      <div style="background-color: rgba(181, 181, 184, 0.403);padding: 2%; box-shadow: inset;">
-         <b><%= post.content %></b> 
-
-      </div>
-        <br>
-        <div style="padding-left: 5%;">
-
-       
-        <small>
-           by - <%= post.user.name %>
-        </small>
-
-       
-        <!-- CHANGE :: display the likes of this post, if the user is logged in, then show the link to toggle likes, else, just show the count -->
-        <br>
-            <!-- study about the data attribute -->
-            <small>
-                <% if (locals.user){ %>
-                      
-                    <a class="post-heart" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
-                        <i class="fas fa-heart" ></i>
-                            <%= post.likes.length %> Likes
-                    </a>
-                <% }else{ %>
-                    <%= post.likes.length %> Likes
-                <% } %>
-            </small>
-
-            <% if (locals.user && locals.user.id == post.user.id){ %>
-            <small style="padding-left: 10%;">
-                <a href="/posts/destroy/<%= post.id %>">
-                    <button class="btn btn-primary" style="font-size: smaller; background-color: rgba(227, 14, 14, 0.729);">Delete
-                    </button>
-                </a>     
-            </small>
-            <% } %>
-        </div>
-    </p>
-
-    <div class="post-comments" style="padding-left: 5%;">
-      <% if (locals.user){ %>
-          <form action="/comments/create" method="POST">
-              <input type="text" name="content" placeholder="add comment" required>
-              <input type="hidden" name="post" value="<%= post._id %>" >
-              <input type="submit" value="Add Comment">
-          </form>
-
-      <% } %>
-
-      <div class="post-comments-list">
-          <ul id="post-comments-<%= post._id %>">
-              <% for (comment of post.comments){%>
-
-                <%- include('_comment') -%>
-                  
-                
-              <%} %>
-          </ul>
-      </div>
-  </div>
-    
-</li>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Website</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
+<body style="background-color: rgb(255, 246, 246);">
+	<header id="layout-header">
+	    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	      <a class="navbar-brand" href="/">
+	        SocialBuzz
+	      </a>
+	      <button
+	        class="navbar-toggler"
+	        type="button"
+	        data-toggle="collapse"
+	        data-target="#navbarNav"
+	        aria-controls="navbarNav"
+	        aria-expanded="false"
+	        aria-label="Toggle navigation"
+	      >
+	        <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <div class="collapse navbar-collapse" id="navbarNav">
+	        <ul class="navbar-nav mr-auto"></ul>
+	        <ul class="navbar-nav">
+	          <% if (locals.user){ %>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/profile/<%=locals.user.id%>">
+					<button class="btn btn-primary"> <%= user.name %></button>
+	            </a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-out">
+				<button class="btn btn-primary">Sign Out</button></a>
+	          </li>
+	          <% }else{ %>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-up">
+					<button class="btn btn-primary">Sign In</button></a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/users/sign-up">
+					<button class="btn btn-primary">Sign Up</button></a>
+	          </li>
+	          <% } %>
+	        </ul>
+	      </div>
+	    </nav>
+	  </header>
+</body>
+</html>
