--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 
 <div id="home-container"> 
 <section id="feed-posts">
@@ -8,8 +9,10 @@
 
    
     <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
-        <input type="submit" value="Post">
+        <textarea name="content" cols="60" rows="3" placeholder="Type here..."></textarea>
+        <!-- <input type="submit" value="Post"> -->
+        <button class="btn btn-primary" style="font-size: larger; background-color: green;">Post
+        </button>
     </form>
     <%} %>
 
@@ -34,5 +37,34 @@
         </p>
         
         <% } %>
+
+
+    </section>
+
+    <%- include('_chat_box') -%>
 </div>
-</section>
+
+
+
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js" ></script>
+<script src="/js/home_posts.js"></script>
+
+<!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
+<script src="/assets/js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function(){
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
+
+<script src="/js/chat_engine.js"></script>
+
+<% if(locals.user){ %>
+<script>
+    new ChatEngine('user-chat-box','<%= locals.user.email %>')
+</script>
+<% } %>
